--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -27,7 +27,13 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col-lg-6 mb-4 mb-lg-0">
-                <h2 class="section-title">{{ _('Welcome to Paraidesa') }}</h2>
+                <div class="d-flex align-items-center mb-4">
+                    <h2 class="section-title mb-0">{{ _('Welcome to Paraidesa') }}</h2>
+                    <img src="{{ url_for('static', filename='images/home/welcome-garden.jpg') }}" 
+                         alt="{{ _('Beautiful Mediterranean garden') }}"
+                         class="ms-4 rounded-circle" 
+                         style="width: 80px; height: 80px; object-fit: cover; border: 3px solid var(--primary-color);">
+                </div>
                 <p class="lead">
                     {{ _('We are a landscape design studio dedicated to creating beautiful, sustainable outdoor spaces.') }}
                 </p>
